[project]
name = "sdlos-tooling"
version = "0.1.0"
description = "sdlos jade-app scaffolding, resource management, and release tooling"

requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "click>=8.1",
    "questionary>=2.0",
]

[project.scripts]
sdlos = "sdlos.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sdlos"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
