[project]
name = "sdlos-tooling"
version = "0.1.0"
description = "sdlos jade-app scaffolding, resource management, and release tooling"

requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "click>=8.1",
    "questionary>=2.0",
    "watchfiles>=0.21",
    "rich>=13.0",
    "lizard>=1.21.3",
    "radon>=6.0.1",
    "libclang>=18.1.1",
]

[project.optional-dependencies]
# Full static-analysis stack.  Install with:
#   uv add --optional sca libclang
sca = [
    "libclang>=18.1",
]

# Development extras.
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.9",
    "ruff>=0.4",
]
# OSM region mesh generation.  Install with:
#   uv add --optional mesh osmnx trimesh shapely numpy requests mapbox-earcut
mesh = [
    "fast-simplification>=0.1.13",
    "mapbox-earcut>=2.0.0",
    "numpy>=2.4.4",
    "osmnx>=2.1.0",
    "requests>=2.33.1",
    "shapely>=2.1.2",
    "trimesh>=4.11.5",
]

[project.scripts]
sdlos = "sdlos.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sdlos"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "RUF"]
ignore  = [
    "E501",   # line too long — handled by formatter
    "B008",   # do not perform function calls in default args (click uses this)
]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
